tests/baselines/reference/declarationEmitPrivateNameCausesError.errors.txt
tests/cases/compiler/file.ts(4,17): error TS4060: Return type of exported function has or is using private name 'IGNORE_EXTRA_VARIABLES'.


==== tests/cases/compiler/file.ts (1 errors) ====
    const IGNORE_EXTRA_VARIABLES = Symbol(); //Notice how this is unexported
    
    //This is exported
    export function ignoreExtraVariables<CtorT extends {new(...args:any[]):{}}> (ctor : CtorT) {
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS4060: Return type of exported function has or is using private name 'IGNORE_EXTRA_VARIABLES'.
        return class extends ctor {
            [IGNORE_EXTRA_VARIABLES] = true; //An unexported constant is used
        };
    }